added descriptoin to post

--- a/_posts/2024-09-19-Hello.md
+++ b/_posts/2024-09-19-Hello.md
@@ -1,5 +1,6 @@
 ---
 title: Hello
+description: Hello and welcome to my blog!
 categories: [Miscellaneous]
 tags: []     # TAG names should always be lowercase
 ---
