--- a/_posts/2024-09-19-Hello.md
+++ b/_posts/2024-09-19-Hello.md
@@ -7,10 +7,9 @@ tags: []     # TAG names should always be lowercase
 
 I have been wanting to:
 * Buy my name's .com domain
-* Execute a basic web dev project
 * Write and document my projects (and maybe thoughts?)
 
-Clubbing all this, pranavbudhiraja.com is now live!
+Clubbing both these things, pranavbudhiraja.com is now live!
 
 It's a basic enough build, but is exactly what I wanted:
 
